[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "surety-api"
description = "Contract-aware API interaction layer for the Surety ecosystem."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Elena Kulgavaya", email = "elena.kulgavaya@gmail.com" }
]
dynamic = ["version"]
dependencies = [
    "deepdiff==8.0.1",
    "surety>=0.0.4,<1.0",
    "surety-config>=0.0.3",
    "surety-diff>=0.0.1",
    "requests",
    "pyyaml",
    "waiting"
]
keywords = [
    "api",
    "contract-testing",
    "automation",
    "integration-testing",
    "surety"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["surety*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
